<resources>
    //General
    <string name="app_name">Recicla APP</string>
    <string name="omplirCamps">Llena todos los campos</string>
    <string name="btnBackInici">&lt;</string>
    <string name="check_pass">Ver contraseña</string>

    //Inici APP
    <string name="preguntaTopSignUp">¿No tienes cuenta?</string>
    <string name="txtBtnSignUp">Regístrate</string>
    <string name="preguntaTopSignIn">¿Ya estas registrado?</string>
    <string name="txtBtnSignIn">Iniciar Sesión</string>

    //Register
    <string name="addNewImageText">+</string>
    <string name="title_register">Registrar</string>
    <string name="txt_Register_btn">Crear Usuario</string>
    <string name="hint_register_location">Ubicación</string>
    <string name="hint_register_email">Email</string>
    <string name="hint_register_desc">Descripción</string>
    <string name="hint_register_nom">Nombre</string>
    <string name="hint_register_cognom">Apellidos</string>
    <string name="hint_register_user">Usuario</string>
    <string name="hint_register_password">Contraseña</string>
    <string name="hint_register_edat">Fecha</string>
    <string name="gmail_com">\@gmail.com</string>
    <string name="errDataValue">La fecha no es válida</string>
    <string name="imatge_usuari">Imagen Usuario</string>
    <string name="hint_dataNaixament">Fecha de nacimiento</string>
    <string name="errRegisterText">El CORREO o USUARIO ya se encuentra registrado</string>

    //LOGIN
    <string name="hintPassword">Contraseña</string>
    <string name="hintUsuari">Usuario</string>
    <string name="txt_benvingut_da">Bienvenido/da</string>
    <string name="txtDadesNoValides_login">Los datos no son válidos</string>
    <string name="emojiErrorSignUp">La descripcion no puede tener EMOTICONOS</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipal</string>

    //MAPS
    <string name="title_activity_maps">Wander</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>

    //Pantalla productes, Pantalla producte, Pantalla usuari i fragments
    <string name="action_settings">Editar Usuario</string>
    <string name="text_dislike">Sacar de la lista</string>
    <string name="text_like">Me gusta</string>
    <string name="hint_titol_addPr">Título</string>
    <string name="preu_addPr">Precio</string>
    <string name="euro_sym">€</string>
    <string name="defaultText_selectType">Categoria</string>
    <string name="btn_addPR_text">Añadir</string>
    <string name="title_peticio">Enviar peticion</string>
    <string name="explicacio_peticio">Añadir una peticion para pedir ser artista i poder subir productos para que la gente vea tus propuestas</string>
    <string name="hint_peticio">Peticion</string>
    <string name="btn_peticio">Enviar</string>
    <string name="item_productes">Productos</string>
    <string name="item_elsMeusProductes">Mis productos</string>
    <string name="item_magrada">Me gusta</string>
    <string name="title_item_categories">Categorias</string>
    <string name="item_eines">Herramientas</string>
    <string name="item_mobles">Muebles</string>
    <string name="item_joguines">Juguetes</string>
    <string name="item_roba">Ropa</string>
    <string name="title_item_logout">Cerrar Sesión</string>
    <string name="item_logout">Cerrar Sesión</string>
    <string name="msg_imageNeeded">Imagen necesaria</string>
    <string name="msg_addNewProd">Producto añadido correctamente</string>
    <string name="msg_addUser">Usuario creado correctamente</string>
    <string name="msg_logOutBox">¿Quieres cerrar sesión?</string>
    <string name="err_noArtist">No eres artista</string>
    <string name="welcome_msg">Hola,</string>
    <string name="btn_acc_editUser">Actualizar</string>
    <string name="btn_can_editUser">Cancelar</string>
    <string name="alert_editUser_title_update">Cambios</string>
    <string name="text_update_editUser">¿Quieres hacer estos cambios?</string>
    <string name="toast_msg_update">Usuario actualizado correctamente</string>
    <string name="title_cancel_editUser">Volver</string>
    <string name="text_cancel_editUser">Los cambios no se guardaran</string>
    <string name="cancel_option">Cancelar</string>
    <string name="pos_option_EditUser">Si</string>

    <string name="opt_upload_Juguete">Juguete</string>
    <string name="opt_upload_Herramienta">Herramienta</string>
    <string name="opt_upload_Ropa">Ropa</string>
    <string name="opt_upload_Mueble">Mueble</string>
    <string name="rem_prodNotInList">Este producto no lo tienes en la lista</string>
    <string name="rem_product_msg">¡Prodcuto borrado correctamente!</string>
    <string name="add_prodAlreadyInList">Este producto ya lo tienes en la lista</string>
    <string name="add_product_msg">¡Prodcuto añadido correctamente!</string>
    <string name="msg_error_sendRequest">Has de llenar el mensaje</string>

</resources>