<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/house"
            android:title="@string/item_productes" />
        <item
            android:id="@+id/nav_self_products"
            android:icon="@drawable/box"
            android:title="@string/item_elsMeusProductes" />
        <item
            android:id="@+id/nav_like_products"
            android:icon="@drawable/heart"
            android:title="@string/item_magrada" />
        <item android:title="@string/title_item_categories">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_eina"
                        android:icon="@drawable/tools"
                        android:title="@string/item_eines" />
                    <item
                        android:id="@+id/nav_moble"
                        android:icon="@drawable/furniture"
                        android:title="@string/item_mobles" />
                    <item
                        android:id="@+id/nav_joguina"
                        android:icon="@drawable/toy"
                        android:title="@string/item_joguines" />
                    <item
                        android:id="@+id/nav_roba"
                        android:icon="@drawable/laundry"
                        android:title="@string/item_roba" />
                </group>

            </menu>
        </item>
        <item android:title="@string/title_item_logout">
            <menu>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout"
                    app:showAsAction="ifRoom"
                    android:title="@string/item_logout" />
            </menu>
        </item>
    </group>

</menu>