<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projecte_2dam_grup6.ui.fragments.HomeFragment"
        android:label="@string/item_productes"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_eina"
        android:name="com.example.projecte_2dam_grup6.ui.fragments.EinesFragment"
        android:label="@string/item_eines"
        tools:layout="@layout/fragment_eines" />

    <fragment
        android:id="@+id/nav_roba"
        android:name="com.example.projecte_2dam_grup6.ui.fragments.RobaFragment"
        android:label="@string/item_roba"
        tools:layout="@layout/fragment_roba" />

    <fragment
        android:id="@+id/nav_joguina"
        android:name="com.example.projecte_2dam_grup6.ui.fragments.JoguinaFragment"
        android:label="@string/item_joguines"
        tools:layout="@layout/fragment_joguina" />

    <fragment
        android:id="@+id/nav_moble"
        android:name="com.example.projecte_2dam_grup6.ui.fragments.MobleFragment"
        android:label="@string/item_mobles"
        tools:layout="@layout/fragment_moble" />

    <fragment
        android:id="@+id/nav_self_products"
        android:name="com.example.projecte_2dam_grup6.ui.fragments.UserProductsFragment"
        android:label="@string/item_elsMeusProductes"
        tools:layout="@layout/fragment_user_products" />

    <fragment
        android:id="@+id/nav_like_products"
        android:name="com.example.projecte_2dam_grup6.ui.fragments.LikesFragment"
        android:label="@string/item_magrada"
        tools:layout="@layout/fragment_likes" />


</navigation>