<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    style="@style/Theme.Projecte_2DAM_Grup6"
    android:background="@drawable/gradient_list"
    android:id="@+id/linearLayout"
    tools:context=".PeticioArtista">

    <Button
        android:id="@+id/btnBackToStart"
        android:layout_width="@dimen/widthSmallButton"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartReturnButton"
        android:layout_marginEnd="@dimen/screenMargin"
        android:onClick="backToStart"
        android:text="@string/btnBackInici"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/title_peticio" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:text="@string/explicacio_peticio" />


    <EditText
        android:id="@+id/peticioUsuari"
        android:layout_width="match_parent"
        android:layout_height="@dimen/altura_editText_descripcio"
        style="@style/Theme.Projecte_2DAM_Grup6.editBox"
        android:layout_marginBottom="@dimen/maringEditText_Register"
        android:layout_marginStart="@dimen/marginEditTextScreen"
        android:layout_marginEnd="@dimen/marginEditTextScreen"
        android:paddingTop="10dp"
        android:layout_marginTop="35dp"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:hint="@string/hint_peticio"/>

    <Button
        android:id="@+id/btnPeticio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="startPeticio"
        android:text="@string/btn_peticio" />
</LinearLayout>
