<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".SignIn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/titleIniciApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/marginTitle_Image"
                android:paddingTop="@dimen/paddingTopTitleLogIn"
                android:textSize="@dimen/titleTextSize"
                android:textAlignment="center"
                android:text="@string/txt_benvingut_da" />


            <ImageView
                android:id="@+id/imageView"
                android:src="@drawable/logo_rounded_hd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/alturaLogo"
                android:layout_marginBottom="@dimen/marginBOT_image_buttons"/>

            <EditText
                android:id="@+id/loginUsertxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/alturaEditText"
                android:background="@drawable/edit_text_background"
                android:layout_marginBottom="@dimen/margenBottom_BTN"
                android:layout_marginStart="@dimen/marginEditTextScreen"
                android:layout_marginEnd="@dimen/marginEditTextScreen"
                android:inputType="text"
                android:paddingEnd="@dimen/paddinIMG_EditText"
                android:drawableEnd="@drawable/ic_person"
                android:hint="@string/hintUsuari"/>

            <EditText
                android:id="@+id/loginPasstxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/alturaEditText"
                android:background="@drawable/edit_text_background"
                android:layout_marginBottom="@dimen/margenBottom_BTN"
                android:layout_marginStart="@dimen/marginEditTextScreen"
                android:layout_marginEnd="@dimen/marginEditTextScreen"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_password"
                android:paddingEnd="@dimen/paddinIMG_EditText"
                android:hint="@string/hintPassword"/>

            <Button
                android:id="@+id/sendDataSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screenMargin"
                android:layout_marginEnd="@dimen/screenMargin"
                android:layout_marginBottom="@dimen/marginBottomScreen"
                android:onClick="validarUserLogin"
                android:text="@string/txtBtnSignIn" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>