<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.Projecte_2DAM_Grup6"
    android:background="@drawable/gradient_list"
    android:id="@+id/linearLayout"
    tools:context=".EditUser">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewUser"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo_rounded_hd"
                android:layout_marginTop="45dp"
                android:layout_gravity="center" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                tools:context=".SignUp">

                <EditText
                    android:id="@+id/editNom"
                    style="@style/Theme.Projecte_2DAM_Grup6.editBox"
                    android:layout_width="165dp"
                    android:layout_height="@dimen/alturaEditText"
                    android:inputType="textEmailAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="10dp"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/editCognom"
                    style="@style/Theme.Projecte_2DAM_Grup6.editBox"
                    android:layout_width="165dp"
                    android:layout_height="@dimen/alturaEditText"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="10dp"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/editUsername"
                    android:layout_marginTop="55dp"
                    style="@style/Theme.Projecte_2DAM_Grup6.editBox"
                    android:layout_width="165dp"
                    android:layout_height="@dimen/alturaEditText"
                    app:layout_constraintTop_toBottomOf="@id/editNom"
                    android:inputType="textEmailAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/editPassword"
                    app:layout_constraintTop_toBottomOf="@id/editCognom"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="55dp"
                    android:layout_width="165dp"
                    android:layout_height="@dimen/alturaEditText"
                    style="@style/Theme.Projecte_2DAM_Grup6.editBox"
                    android:layout_marginEnd="10dp"
                    android:inputType="textPassword"
                    tools:ignore="MissingConstraints" />

                <CheckBox
                    android:id="@+id/checkPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/editPassword"
                    app:layout_constraintStart_toStartOf="@id/editPassword"
                    android:text="Veure contraseya"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_marginTop="55dp"
                    style="@style/Theme.Projecte_2DAM_Grup6.editBox"
                    android:layout_width="165dp"
                    android:layout_height="@dimen/alturaEditText"
                    app:layout_constraintTop_toBottomOf="@id/editUsername"
                    android:inputType="textEmailAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="70dp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/txtAutoGmail"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/alturaEditText"
                    android:gravity="center"
                    android:text = "@string/gmail_com"
                    android:textAlignment="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="55dp"
                    app:layout_constraintTop_toBottomOf="@id/editUsername"
                    app:layout_constraintStart_toEndOf="@id/editEmail"
                    android:textSize="15sp"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/editDesc"
                android:layout_width="match_parent"
                android:layout_height="@dimen/altura_editText_descripcio"
                style="@style/Theme.Projecte_2DAM_Grup6.editBox"
                android:layout_marginBottom="@dimen/maringEditText_Register"
                android:layout_marginStart="@dimen/marginEditTextScreen"
                android:layout_marginEnd="@dimen/marginEditTextScreen"
                android:paddingTop="10dp"
                android:inputType="textMultiLine"
                android:gravity="top"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btnPickerEdat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/maringEditText_Register"
                android:layout_marginStart="@dimen/marginScreen_ageBox"
                android:layout_marginEnd="@dimen/marginScreen_ageBox"
                android:onClick="showDatePicker"
                android:text="@string/hint_register_edat" />

            <TextView
                android:id="@+id/editDataNaix"
                android:layout_width="match_parent"
                android:layout_height="@dimen/alturaEditText"
                style="@style/Theme.Projecte_2DAM_Grup6.editBox"
                android:paddingEnd="20dp"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginBottom="@dimen/maringEditText_Register"
                android:layout_marginStart="120dp"
                android:hint="@string/hint_dataNaixament"
                android:layout_marginEnd="120dp"
                android:inputType="textPostalAddress"/>

            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/maringEditText_Register"
                android:layout_height="450dp" />

            <TextView
                android:id="@+id/editLocation"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                style="@style/Theme.Projecte_2DAM_Grup6.editBox"
                android:paddingEnd="20dp"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginBottom="@dimen/maringEditText_Register"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:inputType="textMultiLine"
                android:hint="@string/hint_register_location"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="55dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btnUpdateUser"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginBottom="@dimen/marginBTN_Bottom_register"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/marginTopBTN_register"
                    android:onClick="validarUpdateUser"
                    android:text="Actualitzar"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/btnCancelUpdate"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:text="Cancelar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:onClick="cancelActionEditUser"
                    app:layout_constraintStart_toEndOf="@id/btnUpdateUser"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>